src/test/c/reject/11-missingSignature.msh
score myScore {
    {
        tempo 200;
        piano {
            clef clefG;
            tabs myTabs {
                c(q) d(q) e(q) f(q) | g(q) a(q) b(q) c(q)
            }
        }
    }
}
